fix: blockquotes and code blocks waste too much horizontal space

--- a/src/public/assets/css/styles.css
+++ b/src/public/assets/css/styles.css
@@ -11,6 +11,9 @@
   --color-shade-55: hsla(0deg 1% 15% / 55%);
   --color-shade-75: hsla(0deg 1% 15% / 75%);
 
+  /* Layout */
+  --wrapper-gutter-inline: 1.6rem;
+
   /* Effects */
   --hover-transition-duration: 150ms;
   --theme-transition-duration: 250ms;
@@ -151,7 +154,7 @@ a:hover:focus-visible .link-effect {
 .wrapper {
   max-width: 72rem;
   margin: 3.2rem auto 7.2rem;
-  padding: 0 1.6rem;
+  padding: 0 var(--wrapper-gutter-inline);
   box-sizing: content-box; /* Ensure the max-width doesn't change */
 }
 
@@ -325,23 +328,41 @@ a:hover:focus-visible .link-effect {
 }
 
 .formatted-content blockquote {
-  margin: 3.2rem 0;
-  padding: 2.4rem 3.2rem;
+  margin-block: 3.2rem;
+  margin-inline: calc(var(--wrapper-gutter-inline) * -1);
+  padding-block: 2.4rem;
+  padding-inline: var(--wrapper-gutter-inline);
   font-size: 2.6rem;
   text-align: center;
   background-color: var(--color-shade-7);
   border-radius: 0.4rem;
 }
 
+@media (min-width: 480px) {
+  .formatted-content blockquote {
+    margin-inline: 0;
+    padding-inline: 3.2rem;
+  }
+}
+
 .formatted-content pre {
-  margin: 3.2rem 0;
-  padding: 1.6rem 2.4rem;
+  margin-block: 3.2rem;
+  margin-inline: calc(var(--wrapper-gutter-inline) * -1);
+  padding-block: 1.6rem;
+  padding-inline: var(--wrapper-gutter-inline);
   line-height: 1.7;
   font-size: 1.5rem;
   background-color: var(--color-shade-7);
   border-radius: 0.4rem;
   white-space: pre;
   overflow: auto;
+}
+
+@media (min-width: 480px) {
+  .formatted-content pre {
+    margin-inline: 0;
+    padding-inline: 2.4rem;
+  }
 }
 
 .formatted-content pre code {
